--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ main: dansplugins.economysystem.MedievalEconomy
 api-version: "1.15"
 
 commands:
-  medievaleconomy:
+  econ:
   balance:
   deposit:
   withdraw:
